--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,36 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --accent-title-color: rgb(255, 194, 230);
+  --accent-color-group: rgb(53, 52, 48);
+  --accent-color-text: rgb(53, 52, 48);
+  --accent-background-text: rgb(53, 52, 48);
+  --accent-background-image: url(../images/cover-image-light.png);
+  --accent-background-color: rgb(255, 141, 203);
+  --accent-font-family: 'IBM Plex mono', serif;
+  --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 6.5rem);
+  --border-color-hover: rgba(50, 49, 45, 0.4);
+  --accent-title-shadow: rgb(255, 141, 203);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-title-color: rgb(255, 194, 230);
+    --accent-color-group: rgb(53, 52, 48);
+    --accent-color-text: rgb(53, 52, 48);
+    --accent-background-text: rgb(53, 52, 48);
+    --accent-background-image: url(../images/cover-image-light.png);
+    --accent-background-color: rgb(255, 141, 203);
+    --accent-font-family: 'IBM Plex mono', serif;
+    --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 6.5rem);
+    --border-color-hover: rgba(50, 49, 45, 0.4);
+    --accent-title-shadow: rgb(255, 141, 203);
+  }
+
+}
+
+.page.theme_light .header__rec {
+  display: none;
 }
