--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,403 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: var(--accent-background-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 35% min-content 21%;
+  padding: 10px;
+  min-block-size: 668px;
+}
+
+.header__title {
+  font-size: var(--font-size-title-mobile);
+  color: var(--accent-title-color);
+  font-family: var(--accent-font-family);
+  text-shadow: 4px 4px 0 var(--accent-title-shadow);
+  font-weight: 700;
+  line-height: 82.5%;
+  text-align: left;
+  padding-bottom: 56px;
+}
+
+.header__text {
+  color: var(--accent-background-text);
+  font-family: var(--accent-font-family);
+  background-color: var(--accent-background-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  align-self: center;
+  margin-bottom: 16px;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+  padding-right: 6px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  font-family: var(--accent-font-family);
+  color: var(--accent-color-group);
+  text-transform: lowercase;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--border-color-hover);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--border-color-hover);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--border-color-hover);
+  pointer-events: none;
+}
+
+.header__rec {
+  position: absolute;
+  top: 10px;
+  right: 38px;
+  color: var(--accent-color-group);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  text-transform: uppercase;
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 44px;
+  inline-size: 9px;
+  block-size: 9px;
+  box-shadow: 0px 0px 4px 2px rgb(255, 0, 112);
+  border-radius: 50%;
+  background-color: var(--accent-color-group);
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::before {
+  inset-inline-start: 10px;
+  inset-block-end: 10px;
+  border-inline-start: 1px solid var(--accent-color-group);
+  border-block-end: 1px solid var(--accent-color-group);
+}
+
+.decorated-zone::after {
+  inset-inline-end: 10px;
+  inset-block-start: 10px;
+  border-block-start: 1px solid var(--accent-color-group);
+  border-inline-end: 1px solid var(--accent-color-group);
+}
+
+.section {
+  padding: 40px 10px 0px;
+  display: grid;
+  gap: 20px;
+  align-items: start;
+}
+
+.section__card {
+  display: grid;
+  gap: 10px;
+}
+
+.section__card-title {
+  color: var(--accent-color-group);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+.section__card-subtitle {
+  color: var(--accent-background-text);
+  font-family: var(--accent-font-family);
+  background-color: var(--accent-background-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+.section__card-text {
+  color: var(--accent-color-text);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+}
+
+.section__card-subtitle-extra {
+  color: var(--accent-background-text);
+  background-color: var(--accent-background-color);
+  font-family: var(--accent-font-family);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+}
+
+.section__card-link {
+  text-decoration: none;
+  border: 1px solid transparent;
+  text-shadow: 2px 2px 0 var(--accent-title-shadow);
+}
+
+.section__card-link:hover {
+  border-bottom: 1px solid var(--accent-color-group);
+}
+
+.section__card-link:focus-visible {
+  outline: none;
+  border: 1px solid var(--accent-color-group);
+}
+
+.section_container {
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 10px;
+}
+
+.section__card-image {
+  object-fit: cover;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.footer {
+  padding: 50px 10px 10px 10px;
+  position: relative;
+  display: grid;
+  min-block-size: 667px;
+}
+
+.footer__title {
+  color: var(--accent-title-color);
+  font-size: var(--font-size-title-mobile);
+  font-family: var(--accent-font-family);
+  align-self: center;
+  justify-self: center;
+  text-shadow: 2px 2px var(--accent-color-group);
+}
+
+@media (width >= 768px) {
+  .header__title,
+  .footer__title {
+    font-size: var(--font-size-title);
+  }
+
+  .header__rec {
+    top: 20px;
+    right: 48px;
+  }
+
+  .decorated-zone::before {
+    inset-inline-start: 20px;
+    inset-block-end: 20px;
+    border-inline-start: 1px solid var(--accent-color-group);
+    border-block-end: 1px solid var(--accent-color-group);
+  }
+
+  .decorated-zone::after {
+    inset-inline-end: 20px;
+    inset-block-start: 20px;
+    border-block-start: 1px solid var(--accent-color-group);
+    border-inline-end: 1px solid var(--accent-color-group);
+  }
+
+  .header {
+    min-block-size: 984px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 20px;
+  }
+
+  .header__theme-menu {
+    grid-column-start: 2;
+  }
+
+  .header__title {
+    grid-column: 1/3;
+    grid-row-start: 2;
+    padding-bottom: 0px;
+    justify-self: start;
+    align-self: center;
+  }
+
+  .header__text {
+    grid-column-start: 2;
+    grid-row-start: 3;
+  }
+
+  .section {
+    padding: 60px 20px 0px;
+  }
+
+  .section:nth-child(1) {
+    grid-template-columns: 32.5% 1fr;
+  }
+
+  .section:nth-child(1) .section__card:nth-of-type(1) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .section:nth-child(1) .section__card:nth-of-type(2) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .section:nth-child(2) {
+    grid-template-columns: 32.5% 1fr;
+    grid-template-rows: 10% 26% 26% 29%;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(1) {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(2) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(3) {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+
+  .section:nth-child(3) {
+    grid-template-columns: 32.5% 1fr;
+    grid-template-rows: 2.4% 23% 14% 21% 14% 13%;
+  }
+
+  .section:nth-child(3) .section-card-title {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .section:nth-child(3) .section-card-subtitle {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .section:nth-child(3) .section__card:nth-of-type(1) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section:nth-child(3) .section__card:nth-of-type(2) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+  .section:nth-child(3) .section__card:nth-of-type(3) {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+  .section:nth-child(3) .section__card:nth-of-type(4) {
+    grid-column: 2/3;
+    grid-row: 5/6;
+  }
+  .section:nth-child(3) .section__card:nth-of-type(5) {
+    grid-column: 2/3;
+    grid-row: 6/7;
+  }
+
+  .section:nth-child(4) {
+    padding-top: 80px;
+  }
+
+  .section_container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 25% 30% 40%;
+    gap: 20px;
+  }
+
+  .section__card-image:nth-child(1) {
+    grid-column: 1/3;
+  }
+
+  .section__card-image:nth-child(2) {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
+  .section__card-image:nth-child(3) {
+    grid-column: 1/1;
+    grid-row: 2/4;
+  }
+  .section__card-image:nth-child(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .section__card-image:nth-child(5) {
+    grid-column: 2/4;
+    grid-row: 3/4;
+  }
+}
+
+@media (width >=1024px) {
+  .header__theme-menu {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .section:nth-child(2) {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 9% 1fr 1fr 1fr; 
+  }
+  .section:nth-child(2) .section-card-title {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(1) {
+    grid-column: 1/2;
+    grid-row: 2/5;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(2) {
+    grid-column: 2/3;
+    grid-row: 2/5;
+  }
+
+  .section:nth-child(2) .section__card:nth-of-type(3) {
+    grid-column: 3/4;
+    grid-row: 2/5;
+  }
 }
