--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-title-color: rgb(219, 0, 255);
+  --accent-color-group: rgb(255, 0, 112);
+  --accent-color-text: rgb(241, 178, 206);
+  --accent-background-text: rgb(0, 0, 40);
+  --accent-background-image: url(../images/cover-image-dark.png);
+  --accent-background-color: rgb(255, 0, 112);
+  --accent-font-family: 'IBM Plex mono', serif;
+  --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 6.5rem);
+  --border-color-hover: rgb(255, 0, 112);
+  --accent-title-shadow: rgb(255, 0, 112);
+}
