--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
   grid-template-rows: 35% min-content 21%;
   padding: 10px;
   min-block-size: 668px;
-  block-size: 100vh;
+  height: 100vh;
 }
 
 .header__title {
@@ -124,7 +124,7 @@
 }
 
 .section {
-  padding: 40px 10px 0px;
+  padding: 50px 10px 0px;
   display: grid;
   gap: 20px;
   align-items: start;
@@ -201,6 +201,7 @@
   position: relative;
   display: grid;
   min-block-size: 667px;
+  height: 100vh;
 }
 
 .footer__title {
@@ -241,10 +242,11 @@
     min-block-size: 984px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    padding: 20px;
+    padding: 20px 20px 20px 0px;
   }
 
   .header__theme-menu {
+    padding-top: 20px;
     grid-column-start: 2;
   }
 
@@ -259,10 +261,11 @@
   .header__text {
     grid-column-start: 2;
     grid-row-start: 3;
+    margin-bottom: 50px;
   }
 
   .section {
-    padding: 60px 20px 0px;
+    padding: 80px 20px 0px;
   }
 
   .section:nth-child(1) {
@@ -364,9 +367,24 @@
     grid-column: 2/4;
     grid-row: 3/4;
   }
+
+  .section:nth-child(4) {
+    padding-top: 0px;
+  }
+
+  .footer {
+    min-block-size: 984px;
+  }
 }
 
 @media (width >=1024px) {
+
+.header,
+.footer {
+  min-block-size: 728px;
+}
+
+
   .header__theme-menu {
     grid-column: 1/3;
     grid-row: 1/2;
@@ -380,7 +398,7 @@
 
   .section:nth-child(2) {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 9% 1fr 1fr 1fr; 
+    grid-template-rows: 9% 1fr 1fr 1fr;
   }
 
   .section:nth-child(2) .section-card-title {
