--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 35% min-content 21%;
-  padding: 10px;
+  padding: 10px 10px 0px;
   min-block-size: 668px;
   height: 100vh;
 }
@@ -338,7 +338,7 @@
   }
 
   .section:nth-child(4) {
-    padding-top: 80px;
+    padding-top: 0px;
   }
 
   .section_container {
@@ -366,10 +366,6 @@
   .section__card-image:nth-child(5) {
     grid-column: 2/4;
     grid-row: 3/4;
-  }
-
-  .section:nth-child(4) {
-    padding-top: 0px;
   }
 
   .footer {
