--- a/styles/style.css
+++ b/styles/style.css
@@ -204,8 +204,8 @@
 }
 
 .footer {
-  margin-top: 50px;
-  padding: 0 10px;
+  margin-top: 40px;
+  padding: 10px;
   position: relative;
   display: grid;
   min-block-size: 667px;
@@ -269,11 +269,14 @@
   .header__text {
     grid-column-start: 2;
     grid-row-start: 3;
-    margin-bottom: 50px;
+    align-self: start;
+    margin-bottom: 0px;
   }
 
-  .section {
-    padding: 80px 20px 0px;
+  .main {
+    margin-top: 60px;
+    padding: 0px 20px;
+    gap: 80px;
   }
 
   .section:nth-child(1) {
@@ -378,6 +381,8 @@
 
   .footer {
     min-block-size: 984px;
+    margin-top: 60px;
+    padding: 20px;
   }
 }
 
