--- a/styles/style.css
+++ b/styles/style.css
@@ -130,11 +130,14 @@
   padding: 0 10px;
 }
 
-
 .section {
   display: grid;
   gap: 20px;
-  align-items: start;
+}
+
+.section__content {
+  display: grid;
+  gap: 20px;
 }
 
 .section__card {
@@ -279,77 +282,35 @@
     gap: 80px;
   }
 
+  .section__content {
+    row-gap: 20px;
+    column-gap: 0px;
+  }
+
   .section:nth-child(1) {
-    grid-template-columns: 32.5% 1fr;
-  }
-
-  .section:nth-child(1) .section__card:nth-of-type(1) {
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-
-  .section:nth-child(1) .section__card:nth-of-type(2) {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-template-columns: 236px 1fr;
   }
 
   .section:nth-child(2) {
-    grid-template-columns: 32.5% 1fr;
-    grid-template-rows: 10% 26% 26% 29%;
+    grid-template-columns: 236px 1fr;
+    grid-template-rows: 10% 1fr;
   }
 
-  .section:nth-child(2) .section__card:nth-of-type(1) {
+  .section:nth-child(2) .section__content {
     grid-column: 1/3;
     grid-row: 2/3;
-  }
-
-  .section:nth-child(2) .section__card:nth-of-type(2) {
-    grid-column: 1/3;
-    grid-row: 3/4;
-  }
-
-  .section:nth-child(2) .section__card:nth-of-type(3) {
-    grid-column: 1/3;
-    grid-row: 4/5;
   }
 
   .section:nth-child(3) {
-    grid-template-columns: 32.5% 1fr;
-    grid-template-rows: 2.4% 23% 14% 21% 14% 13%;
-  }
-
-  .section:nth-child(3) .section-card-title {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
-  .section:nth-child(3) .section-card-subtitle {
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-
-  .section:nth-child(3) .section__card:nth-of-type(1) {
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section:nth-child(3) .section__card:nth-of-type(2) {
-    grid-column: 2/3;
-    grid-row: 3/4;
-  }
-  .section:nth-child(3) .section__card:nth-of-type(3) {
-    grid-column: 2/3;
-    grid-row: 4/5;
-  }
-  .section:nth-child(3) .section__card:nth-of-type(4) {
-    grid-column: 2/3;
-    grid-row: 5/6;
-  }
-  .section:nth-child(3) .section__card:nth-of-type(5) {
-    grid-column: 2/3;
-    grid-row: 6/7;
+    grid-template-columns: 236px 1fr;
   }
 
   .section:nth-child(4) {
     padding-top: 0px;
+  }
+
+  .section:nth-child(4) .section__card {
+    gap: 20px;
   }
 
   .section_container {
@@ -387,12 +348,10 @@
 }
 
 @media (width >=1024px) {
-
-.header,
-.footer {
-  min-block-size: 728px;
-}
-
+  .header,
+  .footer {
+    min-block-size: 728px;
+  }
 
   .header__theme-menu {
     grid-column: 1/3;
