--- a/styles/style.css
+++ b/styles/style.css
@@ -288,11 +288,11 @@
   }
 
   .section:nth-child(1) {
-    grid-template-columns: 236px 1fr;
+    grid-template-columns: 32% 1fr;
   }
 
   .section:nth-child(2) {
-    grid-template-columns: 236px 1fr;
+    grid-template-columns: 32% 1fr;
     grid-template-rows: 10% 1fr;
   }
 
@@ -302,7 +302,7 @@
   }
 
   .section:nth-child(3) {
-    grid-template-columns: 236px 1fr;
+    grid-template-columns: 32% 1fr;
   }
 
   .section:nth-child(4) {
@@ -365,27 +365,28 @@
   }
 
   .section:nth-child(2) {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 9% 1fr 1fr 1fr;
+    gap: 0px;
+    grid-template-rows: 9% 1fr;
   }
 
-  .section:nth-child(2) .section-card-title {
+  .section:nth-child(2) .section__content {
+    gap: 20px;
+  }
+
+  .section:nth-child(2) .section__content .section__card:nth-child(1) {
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 2/3;
+    align-self: start;
   }
 
-  .section:nth-child(2) .section__card:nth-of-type(1) {
-    grid-column: 1/2;
-    grid-row: 2/5;
-  }
-
-  .section:nth-child(2) .section__card:nth-of-type(2) {
+  .section:nth-child(2) .section__content .section__card:nth-child(2) {
     grid-column: 2/3;
-    grid-row: 2/5;
+    grid-row: 2/3;
+    align-self: start;
   }
 
-  .section:nth-child(2) .section__card:nth-of-type(3) {
+  .section:nth-child(2) .section__content .section__card:nth-child(3) {
     grid-column: 3/4;
-    grid-row: 2/5;
+    grid-row: 2/3;
   }
 }
