--- a/styles/style.css
+++ b/styles/style.css
@@ -364,29 +364,9 @@
     flex-direction: row;
   }
 
-  .section:nth-child(2) {
-    gap: 0px;
-    grid-template-rows: 9% 1fr;
-  }
-
-  .section:nth-child(2) .section__content {
+  .section:nth-of-type(2) .section__content {
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
     gap: 20px;
-  }
-
-  .section:nth-child(2) .section__content .section__card:nth-child(1) {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    align-self: start;
-  }
-
-  .section:nth-child(2) .section__content .section__card:nth-child(2) {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    align-self: start;
-  }
-
-  .section:nth-child(2) .section__content .section__card:nth-child(3) {
-    grid-column: 3/4;
-    grid-row: 2/3;
   }
 }
