--- a/styles/style.css
+++ b/styles/style.css
@@ -253,11 +253,11 @@
     min-block-size: 984px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    padding: 20px 20px 20px 0px;
+    padding: 20px;
   }
 
   .header__theme-menu {
-    padding-top: 20px;
+    padding-top: 55px;
     grid-column-start: 2;
   }
 
@@ -273,6 +273,7 @@
     grid-column-start: 2;
     grid-row-start: 3;
     align-self: start;
+    margin-top: 40px;
     margin-bottom: 0px;
   }
 
@@ -358,6 +359,7 @@
     grid-row: 1/2;
     justify-self: center;
     align-self: start;
+    padding: 0px;
   }
 
   .header__theme-menu-list {
@@ -368,5 +370,6 @@
     display: grid;
     grid-template-columns: 32% 32% 32%;
     gap: 20px;
+    align-items: start;
   }
 }
