--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,7 +5,7 @@
 :root {
   --accent-title-color: rgb(219, 0, 255);
   --accent-color-group: rgb(255, 0, 112);
-  --accent-color-text: rgb(241, 178, 206);
+  --accent-color-text: #F1B2CE;
   --accent-background-text: rgb(0, 0, 40);
   --accent-background-image: url(../images/cover-image-dark.png);
   --accent-background-color: rgb(255, 0, 112);
