--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,6 +12,6 @@
   --accent-font-family: 'IBM Plex mono', serif;
   --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 6.5rem);
-  --border-color-hover: rgb(255, 0, 112);
-  --accent-title-shadow: rgb(255, 0, 112);
+  --border-color-hover: rgba(255, 0, 112, 0.4);
+  --accent-title-shadow: #FF0070;
 }
