--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,7 +5,7 @@
 :root {
   --accent-title-color: rgb(219, 0, 255);
   --accent-color-group: rgb(255, 0, 112);
-  --accent-color-text: #F1B2CE;
+  --accent-color-text: rgb(241, 178, 206);
   --accent-background-text: rgb(0, 0, 40);
   --accent-background-image: url(../images/cover-image-dark.png);
   --accent-background-color: rgb(255, 0, 112);
@@ -13,5 +13,5 @@
   --font-size-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --font-size-title-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 6.5rem);
   --border-color-hover: rgba(255, 0, 112, 0.4);
-  --accent-title-shadow: #FF0070;
+  --accent-title-shadow: rgb(255, 0, 112);
 }
