--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 
 .page {
   background-image: var(--accent-background-image);
+  background-color: var(--accent-backgroundpage-color);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -320,23 +321,23 @@
     gap: 20px;
   }
 
-  .section__card-image:nth-child(1) {
+  .section__list:nth-child(1) {
     grid-column: 1/3;
   }
 
-  .section__card-image:nth-child(2) {
+  .section__list:nth-child(2) {
     grid-column: 3/4;
     grid-row: 1/3;
   }
-  .section__card-image:nth-child(3) {
+  .section__list:nth-child(3) {
     grid-column: 1/1;
     grid-row: 2/4;
   }
-  .section__card-image:nth-child(4) {
+  .section__list:nth-child(4) {
     grid-column: 2/3;
     grid-row: 2/3;
   }
-  .section__card-image:nth-child(5) {
+  .section__list:nth-child(5) {
     grid-column: 2/4;
     grid-row: 3/4;
   }
