--- a/styles/style.css
+++ b/styles/style.css
@@ -315,31 +315,31 @@
     gap: 20px;
   }
 
-  .section_container {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 25% 30% 40%;
-    gap: 20px;
-  }
-
-  .section__list:nth-child(1) {
-    grid-column: 1/3;
-  }
-
-  .section__list:nth-child(2) {
-    grid-column: 3/4;
-    grid-row: 1/3;
-  }
-  .section__list:nth-child(3) {
-    grid-column: 1/1;
-    grid-row: 2/4;
-  }
-  .section__list:nth-child(4) {
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
-  .section__list:nth-child(5) {
-    grid-column: 2/4;
-    grid-row: 3/4;
+  .section_container { 
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-rows: 25% 30% 40%; 
+    gap: 20px; 
+  } 
+ 
+  .section__card-image:nth-child(1) { 
+    grid-column: 1/3; 
+  } 
+ 
+  .section__card-image:nth-child(2) { 
+    grid-column: 3/4; 
+    grid-row: 1/3; 
+  } 
+  .section__card-image:nth-child(3) { 
+    grid-column: 1/1; 
+    grid-row: 2/4; 
+  } 
+  .section__card-image:nth-child(4) { 
+    grid-column: 2/3; 
+    grid-row: 2/3; 
+  } 
+  .section__card-image:nth-child(5) { 
+    grid-column: 2/4; 
+    grid-row: 3/4; 
   }
 
   .footer {
