--- a/styles/style.css
+++ b/styles/style.css
@@ -43,13 +43,12 @@
 .header__theme-menu {
   justify-self: end;
   align-self: center;
-  padding-right: 6px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 13px;
+  gap: 16px;
 }
 
 .header__theme-menu-button {
@@ -62,19 +61,20 @@
   line-height: 18px;
   cursor: pointer;
   border: 1px solid transparent;
+  padding: 0px 13px;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--border-color-hover);
+  border: 1px solid var(--border-color-hover-opacity);
 }
 
 .header__theme-menu-button:focus-visible {
   outline: none;
-  border-bottom: 1px solid var(--border-color-hover);
+  border-bottom: 1px solid var(--border-color);
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--border-color-hover);
+  outline: 1px solid var(--border-color);
   pointer-events: none;
 }
 
@@ -187,12 +187,12 @@
 }
 
 .section__card-link:hover {
-  border-bottom: 1px solid var(--accent-color-group);
+  border-bottom: 1px solid var(--accent-color-text);
 }
 
 .section__card-link:focus-visible {
   outline: none;
-  border: 1px solid var(--accent-color-group);
+  border: 1px solid var(--accent-color-text);
 }
 
 .section_container {
@@ -254,13 +254,17 @@
     min-block-size: 984px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    padding: 20px;
+    padding: 20px 20px 20px 0px;
   }
 
   .header__theme-menu {
-    padding-top: 60px;
+    padding-top: 114px;
     grid-column-start: 2;
   }
+
+  .header__theme-menu-button {
+    padding: 2px 13px;
+}
 
   .header__title {
     grid-column: 1/3;
@@ -274,8 +278,7 @@
     grid-column-start: 2;
     grid-row-start: 3;
     align-self: start;
-    margin-top: 40px;
-    margin-bottom: 0px;
+    margin: 49px 0px 0px 10px;
   }
 
   .main {
@@ -290,12 +293,12 @@
   }
 
   .section:nth-child(1) {
-    grid-template-columns: 32% 1fr;
+    grid-template-columns: 32.5% 1fr;
   }
 
   .section:nth-child(2) {
-    grid-template-columns: 32% 1fr;
-    grid-template-rows: 10% 1fr;
+    grid-template-columns: 32.5% 1fr;
+    grid-template-rows: 10.5% 1fr;
   }
 
   .section:nth-child(2) .section__content {
@@ -304,7 +307,7 @@
   }
 
   .section:nth-child(3) {
-    grid-template-columns: 32% 1fr;
+    grid-template-columns: 32.5% 1fr;
   }
 
   .section:nth-child(4) {
@@ -315,31 +318,34 @@
     gap: 20px;
   }
 
-  .section_container { 
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 25% 30% 40%; 
-    gap: 20px; 
-  } 
- 
-  .section__card-image:nth-child(1) { 
-    grid-column: 1/3; 
-  } 
- 
-  .section__card-image:nth-child(2) { 
-    grid-column: 3/4; 
-    grid-row: 1/3; 
-  } 
-  .section__card-image:nth-child(3) { 
-    grid-column: 1/1; 
-    grid-row: 2/4; 
-  } 
-  .section__card-image:nth-child(4) { 
-    grid-column: 2/3; 
-    grid-row: 2/3; 
-  } 
-  .section__card-image:nth-child(5) { 
-    grid-column: 2/4; 
-    grid-row: 3/4; 
+  .section_container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 25% 29% 41%;
+    gap: 20px;
+  }
+
+  .section__card-image:nth-child(1) {
+    grid-column: 1/3;
+  }
+
+  .section__card-image:nth-child(2) {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
+
+  .section__card-image:nth-child(3) {
+    grid-column: 1/1;
+    grid-row: 2/4;
+  }
+
+  .section__card-image:nth-child(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .section__card-image:nth-child(5) {
+    grid-column: 2/4;
+    grid-row: 3/4;
   }
 
   .footer {
@@ -360,11 +366,25 @@
     grid-row: 1/2;
     justify-self: center;
     align-self: start;
-    padding: 0px;
+    padding: 0px 0px 0px 21px;
   }
 
   .header__theme-menu-list {
     flex-direction: row;
+    gap: 10px;
+  }
+
+  .header__theme-menu-button {
+    padding: 2px 12px 2px 12px;
+  }
+
+  .header__text {
+    margin: 57px 0px 0px 12px;
+  }
+
+  .section:nth-child(2) {
+    grid-template-columns: 32% 1fr;
+    grid-template-rows: 9.5% 1fr;
   }
 
   .section:nth-of-type(2) .section__content {
@@ -372,5 +392,11 @@
     grid-template-columns: 32% 32% 32%;
     gap: 20px;
     align-items: start;
+  }
+
+  .section_container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 25% 30% 41%;
+    gap: 20px;
   }
 }
